--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
 			<artifactId>core</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
@@ -111,6 +118,20 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<uriEncoding>UTF-8</uriEncoding>
+					<port>8088</port>
+					<path>/ccweb</path>
+					<systemProperties>
+						<java.io.tmpdir>${project.build.directory}/tomcat</java.io.tmpdir>
+					</systemProperties>
 				</configuration>
 			</plugin>
 		</plugins>
